*****  Thu Jan 10 13:47:49 CET 2019  *****

Fixed bug in bm.init(), set the right order: create HOME folder,
reset config, reset database.
Removed obsolete None-check for loadfile().
Fixed bug with pygments style (get it on execution rather than during
import).

*****

Added ignored context manager for bm.init() calls in develop/install.

*****

Fixed error message in am.add_bibtex() for invalid ADS token.

*****

Bumped bibmanager version to 0.5.5.


*****  Fr 11. Jan 16:11:43 CET 2019  *****

Changed ROOT (again) to point to location of bibmanager/__init__.py
(Will need to update in utils.py once I set the package structure).
PS: This commit breaks untill I fix setup.py

*****

Updated setup.py to add package_data, automate packages, and comment
out cmdclass (until I get it working).
Moved examples folder into bibmanager folder (so it can be included
during install).

*****

Restored cmdclass in setup.py.  Install works as expected.

*****

Fixed bug in u.repr_author(), missed the f before the f-string.

*****

Added MANIFEST.in file.

*****

Bumped bibmanager version to 0.5.6.


*****  Sat Jan 12 12:15:33 CET 2019  *****

Refactored files and package structure to a standard package format.
Fixed a few typos here and there.
Updated docstring examples accordingly.

*****

Moved ads_token and ads_display loading into functions
to update them at runtime.
Removed unnecessary constants (url paths) from ads_manager.py

*****

Bumped bibmanager version to 0.6.0.
This next merge closes #12


*****  Sun Jan 13 14:06:24 CET 2019  *****

Caught case of empty input string in utils.cond_next() returning zero
(thought it's not expected to occur).

*****

Fixed bug in utils.parse_name() for input strings ending (starting)
with a comma.
Fixed missing f in f-string of len-fields exception.

*****

Tweaked utils.cond_split() to count matches at the beginning and end
of string, returning an empty substring for the edges (this is more
inline with the BibTeX name formatting).

*****
